# kobukium

./: .gitignore
hasturtle_service_app/: CMakeLists.txt  package.xml  setup.py
hasturtle_service_app/html/: index.html
hasturtle_service_app/html/css/: scifi-style.css
hasturtle_service_app/html/js/: app.js  models.js  routes.js
hasturtle_service_app/html/js/views/: feedback.js  general.js  locations.js  progress.js  robot.js
hasturtle_service_app/launch/: amcl_demo.launch
hasturtle_service_app/maps/: turing.pgm  turing.yaml  turing_fixed.pgm  turing_perfect.pgm
hasturtle_service_app/param/: dwa_local_planner_params.yaml
hasturtle_service_app/scripts/: test_fake_robot
hasturtle_service_app/src/hasturtle_service_app/: fake_robot.py  robot.py  server.py  world.py
kobuki_noros/: CMakeLists.txt  package.xml  setup.py
kobuki_noros/launch/: noros_api.launch  noros_server.launch
kobuki_noros/param/: mux.yaml
kobuki_noros/scripts/: noros_kobuki_test  noros_turtlesim_test
kobuki_noros/src/kobuki_noros/: programmable.py  server.py
vnc/: desafio.py  desafio0.py  desafio1.py  desafio2.py  desafio3.py  desafio4.py  desafio_heart.py  solucao.py  solucao0.py  solucao1.py  solucao2.py  solucao4.py  solucao_pentagon.py
vnc/desafio0/: desafio.py
vnc/desafio1/: desafio.py  desafio_heart.py  desafio_hexagon.py
vnc/desafio2/: desafio.py  desafio_count.py
vnc/desafio3/: desafio.py
vnc/desafio4/: desafio.py
vnc/desafio5/: desafio.py
vnc/pyguki/: simulator.py
