<?xml version="1.0"?>
<package>
  <name>hasturtle_service_app</name>
  <version>0.0.1</version>
  <description>This package provides a web interface to control and send a Turtlebot on autonomous missions.</description>

  <maintainer email="andre.f.santos@inesctec.pt">André Santos</maintainer>

  <license>MIT</license>

  <author email="andre.f.santos@inesctec.pt">André Santos</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>


  <export></export>
</package>