<?xml version="1.0"?>
<package>
  <name>kobuki_noros</name>
  <version>0.0.1</version>
  <description>kobuki_noros provides a small server that accepts commands via socket and forwards to the proper ROS topics.</description>

  <maintainer email="andre.f.santos@inesctec.pt">Andre Santos</maintainer>

  <license>MIT</license>

  <author email="andre.f.santos@inesctec.pt">Andre Santos</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export></export>
</package>